# libslug20

./: .travis.yml  Cargo.toml  README.md
app/openinternetcryptography/: package.json  pnpm-lock.yaml
app/openinternetcryptography/src/: app.html
app/openinternetcryptography/src-tauri/: Cargo.toml  tauri.conf.json
app/openinternetcryptography/src-tauri/src/: lib.rs  main.rs
app/openinternetcryptography/src-tauri/src/api/: mod.rs
app/openinternetcryptography/src-tauri/src/oint_components/: constants.rs  mod.rs
app/openinternetcryptography/src-tauri/src/oint_components/fs/: mod.rs
app/openinternetcryptography/src-tauri/src/oint_components/operations/: mod.rs
app/openinternetcryptography/src/components/: footer.svelte  hero.svelte  navbar.svelte  navbar_2.svelte
app/openinternetcryptography/src/lib/: autocomplete.ts  custom_colors.scss
app/openinternetcryptography/src/routes/: +layout.svelte  +page.svelte
app/openinternetcryptography/src/routes/home/: +page.svelte
app/openinternetcryptography/src/routes/init-generation/: +page.svelte
app/openinternetcryptography/src/routes/init-generation/keygen/: +page.svelte
app/openinternetcryptography/src/routes/initial-generation/: +page.svelte
app/openinternetcryptography/src/routes/keys/: +page.svelte
app/openinternetcryptography/src/routes/signing/: signing.svelte
docs/: X59_FMT.md
examples/: api.rs  bip39.rs  chacha20.rs  shulgin.rs  shulginsigning.rs
libslug-zk-ext/: Cargo.toml
libslug-zk-ext/src/: lib.rs
oint-keys/: Cargo.toml  README.md
oint-keys-traits/: Cargo.toml
oint-keys-traits/src/: lib.rs
oint-keys/examples/: gen.rs  generate.rs
oint-keys/src/: constants.rs  encodings.rs  key.rs  lib.rs
oint-keys/src/algorithms/: mod.rs
oint-keys/src/algorithms/encryption/: mod.rs
oint-keys/src/algorithms/slug/: mod.rs
oint-keys/src/algorithms/symmetric_encryption/: mod.rs
oint-keys/src/prelude/: mod.rs
oint-keys/src/traits/: base.rs  liberato_key_traits.rs  mod.rs
oint-keys/tests/common/: absolvesigning.rs  bls.rs  ecdsa.rs  ed25519.rs  ed448.rs  esphandsigning.rs  falcon1024.rs  ml_dsa.rs  mod.rs  schnorr.rs  shulginsigning.rs  sphincs.rs
openinternetcryptography-backend-node/: Cargo.toml
openinternetcryptographykeys/: Cargo.toml  README.md
openinternetcryptographykeys/docs/: standards.md
openinternetcryptographykeys/examples/: mod.rs
openinternetcryptographykeys/src/: lib.rs
openinternetcryptographykeys/src/core/: mod.rs
openinternetcryptographykeys/src/core/__types/: algorithms.rs  mod.rs  standard.rs
openinternetcryptographykeys/src/core/__types/standards/: __types.rs  mod.rs
openinternetcryptographykeys/src/keys/: mod.rs
openinternetcryptographykeys/src/keys/oint/: mod.rs  usage.rs
openinternetcryptographykeys/src/keys/oint/__types/: mod.rs
openinternetcryptographykeys/src/keys/oint/required_traits/: mod.rs
openinternetcryptographykeys/src/prelude/: mod.rs
openinternetcryptographykeys/tests/: bls.rs  ecdsa.rs  ed448.rs  falcon.rs  mldsa3.rs  mod.rs  schnorr.rs  sphincs.rs
openinternetcryptographykeys/tests/frompemany/: mod.rs
openinternetcryptographykeys/tests/hybrid/: absolvesigning.rs  esphandsigning.rs  mod.rs  shulginsigning.rs
slug20-cli/: Cargo.toml
slug20-cli/src/: main.rs
src/: lib.rs
src/constants/: cipher_suites.rs  mod.rs
src/errors/: mod.rs
src/prelude/: mod.rs
src/prelude/signatures/: mod.rs
src/slugcrypt/api/: mod.rs
src/slugcrypt/internals/bip32/: mod.rs
src/slugcrypt/internals/bip39/: mod.rs
src/slugcrypt/internals/bip39/traits/: mod.rs
src/slugcrypt/internals/csprng/: mod.rs
src/slugcrypt/internals/encryption/: ecies.rs  ml_kem.rs
src/slugcrypt/internals/signature/: TODO  absolvesigning.rs  bls.rs  constants.rs  ecdsa.rs  ed25519.rs  ed448.rs  ed448_2.rs  esphand_signature.rs  falcon.rs  hybridfalconsigning.rs  ml_dsa.rs  mod.rs  rsa.rs  schnorr.rs  shulginsigning.rs  sphincs_plus.rs
src/slugcrypt/internals/signature/utils/: mod.rs  signing_csprng.rs
src/slugcrypt/traits/: mod.rs
src/standardization/: mod.rs
src/x59/: mod.rs
src/x59/ecosystem/core/: mod.rs
src/x59/ecosystem/core/certificate/: mod.rs
src/x59/ecosystem/core/traits/: mod.rs
tests/encryption/: ecies.rs
tests/signatures/: falcon1024.rs  hybridfalconsignature.rs  mod.rs  shulginsigning.rs
x59cert-std-rs/: Cargo.toml
x59cert-std-rs/src/: lib.rs
x59pk-fmt/: Cargo.toml  README.md
x59pk-fmt/src/: derive.rs  label.rs  lib.rs
x59pk-fmt/src/traits/: mod.rs
