[package]
name = "oint-keys"
version = "0.1.0"
edition = "2024"

[dependencies]
oint-keys-traits = {path = "../oint-keys-traits"}

# /silene/libslug20: Cryptography Library
libslug = {version="0.9.3"}

fixedstr = {version="0.5.10", features=["serde","pub-tstr"]}

# Serialization and Zeroization
serde = { version="1.0.228", features=["derive"]}
zeroize = {version="1.8.2", features=["derive"]}