[package]
name = "oint-keys"
version = "0.1.0"
authors = ["silene","SundialSource","WeSpeakInCursive.xyz"]
description = "A Simple Standard Cryptography-Suite For Web 3.20, offering cryptographic abstraction (Generic Signing/Verifying, Generic Encryption) for various algorithms including post-quantum."
categories = ["Cryptography","Authentication","Security"]
keywords = ["oint","cryptography","post-quantum","standard","openinternet"]
readme = "README.md"
repository = "https://github.com/sileneundula/libslug20/tree/master/oint-keys"
homepage = "htttps://wespeakincursive.xyz"
edition = "2024"

[dependencies]
# /silene/libslug20: Cryptography Library
libslug = {version="0.9.3"}

fixedstr = {version="0.5.10", features=["serde","pub-tstr"]}

# Serialization and Zeroization
serde = { version="1.0.228", features=["derive"]}
zeroize = {version="1.8.2", features=["derive"]}