[package]
name = "openinternetcryptographykeys"
version = "0.1.0"
edition = "2024"

[dependencies]
libslug = "0.11.0"
serde = {version="1.0.0", features=["derive"], optional=true}
fixedstr = {version="0.5.10", features=["serde"]}
zeroize = {version="1.8.2", features=["derive"]}

[features]
full = ["dep:serde"]
default = ["full"]