[package]
name = "openinternetcryptographykeys"
authors = ["silene","SundialSource","WeSpeakInCursive.xyz"]
description = "A Simple Standard Cryptography-Suite For Web 3.20, offering cryptographic abstraction (Generic Signing/Verifying, Generic Encryption) for various algorithms including post-quantum."
categories = ["cryptography","security","authentication"]
keywords = ["oint","cryptography","post-quantum","web3","openinternet"]
readme = "README.md"
repository = "https://github.com/sileneundula/libslug20/tree/master/oint-keys"
homepage = "https://wespeakincursive.xyz"
license = "Apache-2.0 OR MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
libslug = "0.11.0"
serde = {version="1.0.0", features=["derive"], optional=true}
fixedstr = {version="0.5.10", features=["serde"]}
zeroize = {version="1.8.2", features=["derive"]}

[features]
full = ["dep:serde"]
default = ["full"]